syntax = "proto3";
package model;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message RouteController {
  int32 id = 1 [ (gogoproto.customname) = "ID" ];
  int32 autonomous_system_number = 2;
  string ip = 3 [ (gogoproto.customname) = "IP" ];
}
message AutonomousSystem {
  int32 number = 1;
  int32 link_capacity = 2;
  int32 cost = 3;
}
message UpdateMessage {
  string uuid = 1 [ (gogoproto.customname) = "UUID" ];
  RouteController source_route_controller = 2;
  repeated AutonomousSystem destination_autonomous_system = 3;
}